scsi: ufs: host: mediatek: Fix invalid access in vccqx handling (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1691,6 +1691,7 @@
 	patches.kernel.org/6.17.8-303-scsi-ufs-host-mediatek-Fix-PWM-mode-switch-iss.patch
 	patches.kernel.org/6.17.8-304-scsi-ufs-host-mediatek-Assign-power-mode-userd.patch
 	patches.kernel.org/6.17.8-305-scsi-ufs-host-mediatek-Change-reset-sequence-f.patch
+	patches.kernel.org/6.17.8-306-scsi-ufs-host-mediatek-Fix-invalid-access-in-v.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
