hwmon: sy7636a: add alias (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1546,6 +1546,7 @@
 	patches.kernel.org/6.17.8-158-pinctrl-keembay-release-allocated-memory-in-de.patch
 	patches.kernel.org/6.17.8-159-power-supply-sbs-charger-Support-multiple-devi.patch
 	patches.kernel.org/6.17.8-160-io_uring-rsrc-respect-submitter_task-in-io_reg.patch
+	patches.kernel.org/6.17.8-161-hwmon-sy7636a-add-alias.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
