--- a/series.conf
+++ b/series.conf
@@ -1662,6 +1662,7 @@
 	patches.kernel.org/6.17.8-274-selftests-net-Ensure-assert-triggers-in-psock_.patch
 	patches.kernel.org/6.17.8-275-wifi-rtw89-print-just-once-for-unknown-C2H-eve.patch
 	patches.kernel.org/6.17.8-276-wifi-rtw88-sdio-use-indirect-IO-for-device-reg.patch
+	patches.kernel.org/6.17.8-277-wifi-rtw89-add-dummy-C2H-handlers-for-BCN-rese.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
