--- a/series.conf
+++ b/series.conf
@@ -1417,6 +1417,7 @@
 	patches.kernel.org/6.17.8-029-wifi-ath10k-Fix-memory-leak-on-unsupported-WMI.patch
 	patches.kernel.org/6.17.8-030-wifi-ath11k-Add-missing-platform-IDs-for-quirk.patch
 	patches.kernel.org/6.17.8-031-wifi-ath12k-free-skb-during-idr-cleanup-callba.patch
+	patches.kernel.org/6.17.8-032-wifi-ath11k-avoid-bit-operation-on-key-flags.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
