--- a/series.conf
+++ b/series.conf
@@ -1699,6 +1699,7 @@
 	patches.kernel.org/6.17.8-311-HID-pidff-Use-direction-fix-only-for-condition.patch
 	patches.kernel.org/6.17.8-312-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetecti.patch
 	patches.kernel.org/6.17.8-313-drm-bridge-display-connector-don-t-set-OP_DETE.patch
+	patches.kernel.org/6.17.8-314-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
