net: ipv6: fix field-spanning memcpy warning in AH output (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1693,6 +1693,7 @@
 	patches.kernel.org/6.17.8-305-scsi-ufs-host-mediatek-Change-reset-sequence-f.patch
 	patches.kernel.org/6.17.8-306-scsi-ufs-host-mediatek-Fix-invalid-access-in-v.patch
 	patches.kernel.org/6.17.8-307-gpu-nova-core-register-allow-fields-named-offs.patch
+	patches.kernel.org/6.17.8-308-net-ipv6-fix-field-spanning-memcpy-warning-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
