--- a/series.conf
+++ b/series.conf
@@ -1463,6 +1463,7 @@
 	patches.kernel.org/6.17.8-075-tools-ynl-avoid-print_field-when-there-is-no-r.patch
 	patches.kernel.org/6.17.8-076-dpll-spec-add-missing-module-name-and-clock-id.patch
 	patches.kernel.org/6.17.8-077-ASoC-fsl_sai-Fix-sync-error-in-consumer-mode.patch
+	patches.kernel.org/6.17.8-078-ASoC-soc_sdw_utils-remove-cs42l43-component_na.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
