--- a/series.conf
+++ b/series.conf
@@ -1974,6 +1974,7 @@
 	patches.kernel.org/6.17.8-586-RDMA-irdma-Update-Kconfig.patch
 	patches.kernel.org/6.17.8-587-IB-ipoib-Ignore-L3-master-device.patch
 	patches.kernel.org/6.17.8-588-bnxt_en-Add-fw-log-trace-support-for-5731X-574.patch
+	patches.kernel.org/6.17.8-589-jfs-Verify-inode-mode-when-loading-from-disk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
