dmaengine: mv_xor: match alloc_wc and free_wc (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1799,6 +1799,7 @@
 	patches.kernel.org/6.17.8-411-ptp-Limit-time-setting-of-PTP-clocks.patch
 	patches.kernel.org/6.17.8-412-drm-xe-guc-Add-devm-release-action-to-safely-t.patch
 	patches.kernel.org/6.17.8-413-dmaengine-sh-setup_xref-error-handling.patch
+	patches.kernel.org/6.17.8-414-dmaengine-mv_xor-match-alloc_wc-and-free_wc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
