iio: imu: bmi270: Match PNP ID found on newer GPD firmware (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1733,6 +1733,7 @@
 	patches.kernel.org/6.17.8-345-drm-panel-ilitek-ili9881c-move-display_on-_off.patch
 	patches.kernel.org/6.17.8-346-rds-Fix-endianness-annotation-for-RDS_MPATH_HA.patch
 	patches.kernel.org/6.17.8-347-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
+	patches.kernel.org/6.17.8-348-iio-imu-bmi270-Match-PNP-ID-found-on-newer-GPD.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
