scsi: lpfc: Remove ndlp kref decrement clause for F_Port_Ctrl in lpfc_cleanup (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1959,6 +1959,7 @@
 	patches.kernel.org/6.17.8-571-scsi-lpfc-Clean-up-allocated-queues-when-queue.patch
 	patches.kernel.org/6.17.8-572-scsi-lpfc-Decrement-ndlp-kref-after-FDISC-retr.patch
 	patches.kernel.org/6.17.8-573-scsi-lpfc-Check-return-status-of-lpfc_reset_fl.patch
+	patches.kernel.org/6.17.8-574-scsi-lpfc-Remove-ndlp-kref-decrement-clause-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
