--- a/series.conf
+++ b/series.conf
@@ -2140,6 +2140,7 @@
 	patches.kernel.org/6.17.8-752-riscv-ptdump-use-seq_puts-in-pt_dump_seq_puts-.patch
 	patches.kernel.org/6.17.8-753-Revert-wifi-ath12k-Fix-missing-station-power-s.patch
 	patches.kernel.org/6.17.8-754-scsi-ufs-core-Revert-Make-HID-attributes-visib.patch
+	patches.kernel.org/6.17.8-755-Bluetooth-hci_event-validate-skb-length-for-un.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
