--- a/series.conf
+++ b/series.conf
@@ -2219,6 +2219,7 @@
 	patches.kernel.org/6.17.8-831-scsi-ufs-ufs-pci-Set-UFSHCD_QUIRK_PERFORM_LINK.patch
 	patches.kernel.org/6.17.8-832-scsi-ufs-core-Add-a-quirk-to-suppress-link_sta.patch
 	patches.kernel.org/6.17.8-833-scsi-ufs-core-Fix-invalid-probe-error-return-v.patch
+	patches.kernel.org/6.17.8-834-drm-amd-display-update-color-on-atomic-commit-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
