tty: serial: ip22zilog: Use platform device for probing (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1680,6 +1680,7 @@
 	patches.kernel.org/6.17.8-292-net-stmmac-Check-stmmac_hw_setup-in-stmmac_res.patch
 	patches.kernel.org/6.17.8-293-ice-Don-t-use-pK-through-printk-or-tracepoints.patch
 	patches.kernel.org/6.17.8-294-thunderbolt-Use-is_pciehp-instead-of-is_hotplu.patch
+	patches.kernel.org/6.17.8-295-tty-serial-ip22zilog-Use-platform-device-for-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
