cpufreq: ondemand: Update the efficient idle check for Intel extended Families (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1550,6 +1550,7 @@
 	patches.kernel.org/6.17.8-162-selftests-bpf-Fix-incorrect-array-size-calcula.patch
 	patches.kernel.org/6.17.8-163-block-check-for-valid-bio-while-splitting.patch
 	patches.kernel.org/6.17.8-164-irqchip-loongson-pch-lpc-Use-legacy-domain-for.patch
+	patches.kernel.org/6.17.8-165-cpufreq-ondemand-Update-the-efficient-idle-che.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
