--- a/series.conf
+++ b/series.conf
@@ -1445,6 +1445,7 @@
 	patches.kernel.org/6.17.8-057-Bluetooth-hci_sync-fix-race-in-hci_cmd_sync_de.patch
 	patches.kernel.org/6.17.8-058-Bluetooth-ISO-Fix-BIS-connection-dst_type-hand.patch
 	patches.kernel.org/6.17.8-059-Bluetooth-btmtksdio-Add-pmctrl-handling-for-BT.patch
+	patches.kernel.org/6.17.8-060-Bluetooth-HCI-Fix-tracking-of-advertisement-se.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
