drm/nouveau: always set RMDevidCheckIgnore for GSP-RM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1656,6 +1656,7 @@
 	patches.kernel.org/6.17.8-268-docs-kernel-doc-avoid-script-crash-on-ancient-.patch
 	patches.kernel.org/6.17.8-269-drm-sharp-memory-Do-not-access-GEM-DMA-vaddr-d.patch
 	patches.kernel.org/6.17.8-270-PCI-Disable-MSI-on-RDC-PCI-to-PCIe-bridges.patch
+	patches.kernel.org/6.17.8-271-drm-nouveau-always-set-RMDevidCheckIgnore-for-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
