rpmsg: char: Export alias for RPMSG ID rpmsg-raw from table (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1735,6 +1735,7 @@
 	patches.kernel.org/6.17.8-347-net-wangxun-limit-tx_max_coalesced_frames_irq.patch
 	patches.kernel.org/6.17.8-348-iio-imu-bmi270-Match-PNP-ID-found-on-newer-GPD.patch
 	patches.kernel.org/6.17.8-349-media-ipu6-isys-Set-embedded-data-type-correct.patch
+	patches.kernel.org/6.17.8-350-rpmsg-char-Export-alias-for-RPMSG-ID-rpmsg-raw.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
