selftests/Makefile: include $(INSTALL_DEP_TARGETS) in clean target to clean net/lib dependency (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1954,6 +1954,7 @@
 	patches.kernel.org/6.17.8-566-tools-ynl-gen-validate-nested-arrays.patch
 	patches.kernel.org/6.17.8-567-drm-xe-guc-Return-an-error-code-if-the-GuC-loa.patch
 	patches.kernel.org/6.17.8-568-drm-amdgpu-reject-gang-submissions-under-SRIOV.patch
+	patches.kernel.org/6.17.8-569-selftests-Makefile-include-INSTALL_DEP_TARGETS.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
