kbuild: Strip trailing padding bytes from modules.builtin.modinfo (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2224,6 +2224,7 @@
 	patches.kernel.org/6.17.8-836-kunit-Extend-kconfig-help-text-for-KUNIT_UML_P.patch
 	patches.kernel.org/6.17.8-837-ALSA-hda-tas2781-Enable-init_profile_id-for-de.patch
 	patches.kernel.org/6.17.8-838-ACPI-SPCR-Check-for-table-version-when-using-p.patch
+	patches.kernel.org/6.17.8-839-kbuild-Strip-trailing-padding-bytes-from-modul.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
