accel/habanalabs/gaudi2: read preboot status after recovering from dirty state (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2022,6 +2022,7 @@
 	patches.kernel.org/6.17.8-634-accel-habanalabs-gaudi2-fix-BMON-disable-confi.patch
 	patches.kernel.org/6.17.8-635-scsi-mpt3sas-Add-support-for-22.5-Gbps-SAS-lin.patch
 	patches.kernel.org/6.17.8-636-accel-habanalabs-return-ENOMEM-if-less-than-re.patch
+	patches.kernel.org/6.17.8-637-accel-habanalabs-gaudi2-read-preboot-status-af.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
