--- a/series.conf
+++ b/series.conf
@@ -2068,6 +2068,7 @@
 	patches.kernel.org/6.17.8-680-drm-amd-display-Add-fallback-path-for-YCBCR422.patch
 	patches.kernel.org/6.17.8-681-ACPICA-Update-dsmethod.c-to-get-rid-of-unused-.patch
 	patches.kernel.org/6.17.8-682-RDMA-bnxt_re-Fix-a-potential-memory-leak-in-de.patch
+	patches.kernel.org/6.17.8-683-RDMA-irdma-Fix-SD-index-calculation.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
