--- a/series.conf
+++ b/series.conf
@@ -1752,6 +1752,7 @@
 	patches.kernel.org/6.17.8-364-selftests-drv-net-hds-restore-hds-settings.patch
 	patches.kernel.org/6.17.8-365-fuse-zero-initialize-inode-private-data.patch
 	patches.kernel.org/6.17.8-366-virtio_fs-fix-the-hash-table-using-in-virtio_f.patch
+	patches.kernel.org/6.17.8-367-selftests-pci_endpoint-Skip-IRQ-test-if-IRQ-is.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
