wifi: iwlwifi: mld: trigger mlo scan only when not in EMLSR (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1766,6 +1766,7 @@
 	patches.kernel.org/6.17.8-378-drm-xe-Cancel-pending-TLB-inval-workers-on-tea.patch
 	patches.kernel.org/6.17.8-379-net-Prevent-RPS-table-overwrite-of-active-flow.patch
 	patches.kernel.org/6.17.8-380-eth-fbnic-Reset-hw-stats-upon-PCI-error.patch
+	patches.kernel.org/6.17.8-381-wifi-iwlwifi-mld-trigger-mlo-scan-only-when-no.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
