char: Use list_del_init() in misc_deregister() to reinitialize list pointer (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1857,6 +1857,7 @@
 	patches.kernel.org/6.17.8-469-drm-msm-Fix-32b-size-truncation.patch
 	patches.kernel.org/6.17.8-470-dt-bindings-display-msm-gmu-Update-Adreno-623-.patch
 	patches.kernel.org/6.17.8-471-drm-msm-make-sure-to-not-queue-up-recovery-mor.patch
+	patches.kernel.org/6.17.8-472-char-Use-list_del_init-in-misc_deregister-to-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
