mfd: intel-lpss: Add Intel Wildcat Lake LPSS PCI IDs (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1612,6 +1612,7 @@
 	patches.kernel.org/6.17.8-224-mfd-macsmc-Add-apple-t8103-smc-compatible.patch
 	patches.kernel.org/6.17.8-225-mfd-core-Increment-of_node-s-refcount-before-l.patch
 	patches.kernel.org/6.17.8-226-mfd-cs42l43-Move-IRQ-enable-disable-to-encompa.patch
+	patches.kernel.org/6.17.8-227-mfd-intel-lpss-Add-Intel-Wildcat-Lake-LPSS-PCI.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
