--- a/series.conf
+++ b/series.conf
@@ -1923,6 +1923,7 @@
 	patches.kernel.org/6.17.8-535-wifi-mt76-mt7921-Add-160MHz-beamformee-capabil.patch
 	patches.kernel.org/6.17.8-536-wifi-mt76-mt7925-add-pci-restore-for-hibernate.patch
 	patches.kernel.org/6.17.8-537-wifi-mt76-mt7996-Fix-mt7996_reverse_frag0_hdr_.patch
+	patches.kernel.org/6.17.8-538-wifi-mt76-mt7996-Set-def_wcid-pointer-in-mt799.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
