drm/xe: improve dma-resv handling for backup object (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1830,6 +1830,7 @@
 	patches.kernel.org/6.17.8-442-net-call-cond_resched-less-often-in-__release_.patch
 	patches.kernel.org/6.17.8-443-smsc911x-add-second-read-of-EEPROM-mac-when-po.patch
 	patches.kernel.org/6.17.8-444-drm-gpusvm-fix-hmm_pfn_to_map_order-usage.patch
+	patches.kernel.org/6.17.8-445-drm-xe-improve-dma-resv-handling-for-backup-ob.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
