--- a/series.conf
+++ b/series.conf
@@ -1930,6 +1930,7 @@
 	patches.kernel.org/6.17.8-542-ALSA-serial-generic-remove-shared-static-buffe.patch
 	patches.kernel.org/6.17.8-543-wifi-mt76-mt7996-fix-memory-leak-on-mt7996_mcu.patch
 	patches.kernel.org/6.17.8-544-wifi-mt76-mt7996-disable-promiscuous-mode-by-d.patch
+	patches.kernel.org/6.17.8-545-wifi-mt76-use-altx-queue-for-offchannel-tx-on-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
