kselftest/arm64: tpidr2: Switch to waitpid() over wait4() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1528,6 +1528,7 @@
 	patches.kernel.org/6.17.8-140-arm64-versal-net-Update-rtc-calibration-value.patch
 	patches.kernel.org/6.17.8-141-cpufreq-longhaul-handle-NULL-policy-in-longhau.patch
 	patches.kernel.org/6.17.8-142-firmware-qcom-scm-Allow-QSEECOM-on-Dell-Inspir.patch
+	patches.kernel.org/6.17.8-143-kselftest-arm64-tpidr2-Switch-to-waitpid-over-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
