drm/amd/display: Fix incorrect return of vblank enable on unconfigured crtc (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1492,6 +1492,7 @@
 	patches.kernel.org/6.17.8-104-drm-i915-dmc-Clear-HRR-EVT_CTL-HTP-to-zero-on-.patch
 	patches.kernel.org/6.17.8-105-drm-ast-Clear-preserved-bits-from-register-out.patch
 	patches.kernel.org/6.17.8-106-drm-amd-Check-that-VPE-has-reached-DPM0-in-idl.patch
+	patches.kernel.org/6.17.8-107-drm-amd-display-Fix-incorrect-return-of-vblank.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
