ACPI: SPCR: Check for table version when using precise baudrate (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2223,6 +2223,7 @@
 	patches.kernel.org/6.17.8-835-extcon-adc-jack-Cleanup-wakeup-source-only-if-.patch
 	patches.kernel.org/6.17.8-836-kunit-Extend-kconfig-help-text-for-KUNIT_UML_P.patch
 	patches.kernel.org/6.17.8-837-ALSA-hda-tas2781-Enable-init_profile_id-for-de.patch
+	patches.kernel.org/6.17.8-838-ACPI-SPCR-Check-for-table-version-when-using-p.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
