firmware: ti_sci: Enable abort handling of entry to LPM (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1516,6 +1516,7 @@
 	patches.kernel.org/6.17.8-128-memstick-Add-timeout-to-prevent-indefinite-wai.patch
 	patches.kernel.org/6.17.8-129-cpufreq-ti-Add-support-for-AM62D2.patch
 	patches.kernel.org/6.17.8-130-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-logi.patch
+	patches.kernel.org/6.17.8-131-firmware-ti_sci-Enable-abort-handling-of-entry.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
