--- a/series.conf
+++ b/series.conf
@@ -1861,6 +1861,7 @@
 	patches.kernel.org/6.17.8-473-drm-msm-adreno-Add-speedbin-data-for-A623-GPU.patch
 	patches.kernel.org/6.17.8-474-drm-msm-adreno-Add-fenced-regwrite-support.patch
 	patches.kernel.org/6.17.8-475-drm-msm-a6xx-Switch-to-GMU-AO-counter.patch
+	patches.kernel.org/6.17.8-476-idpf-link-NAPIs-to-queues.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
