ALSA: serial-generic: remove shared static buffer (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1927,6 +1927,7 @@
 	patches.kernel.org/6.17.8-539-wifi-mt76-mt7996-Temporarily-disable-EPCS.patch
 	patches.kernel.org/6.17.8-540-wifi-mt76-mt7996-support-writing-MAC-TXD-for-A.patch
 	patches.kernel.org/6.17.8-541-wifi-mt76-mt76_eeprom_override-to-int.patch
+	patches.kernel.org/6.17.8-542-ALSA-serial-generic-remove-shared-static-buffe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
