--- a/series.conf
+++ b/series.conf
@@ -2081,6 +2081,7 @@
 	patches.kernel.org/6.17.8-693-clk-thead-th1520-ap-set-all-AXI-clocks-to-CLK_.patch
 	patches.kernel.org/6.17.8-694-clk-renesas-rzv2h-Re-assert-reset-on-deassert-.patch
 	patches.kernel.org/6.17.8-695-clk-samsung-exynos990-Add-missing-USB-clock-re.patch
+	patches.kernel.org/6.17.8-696-fs-hpfs-Fix-error-code-for-new_inode-failure-i.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
