--- a/series.conf
+++ b/series.conf
@@ -2184,6 +2184,7 @@
 	patches.kernel.org/6.17.8-796-net-bridge-fix-use-after-free-due-to-MST-port-.patch
 	patches.kernel.org/6.17.8-797-net-bridge-fix-MST-static-key-usage.patch
 	patches.kernel.org/6.17.8-798-selftests-vsock-avoid-false-positives-when-che.patch
+	patches.kernel.org/6.17.8-799-tracing-Fix-memory-leaks-in-create_field_var.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
