--- a/series.conf
+++ b/series.conf
@@ -1902,6 +1902,7 @@
 	patches.kernel.org/6.17.8-514-openrisc-Add-R_OR1K_32_PCREL-relocation-type-m.patch
 	patches.kernel.org/6.17.8-515-netfilter-nf_reject-don-t-reply-to-icmp-error-.patch
 	patches.kernel.org/6.17.8-516-x86-kvm-Prefer-native-qspinlock-for-dedicated-.patch
+	patches.kernel.org/6.17.8-517-x86-virt-tdx-Use-precalculated-TDVPR-page-phys.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
