hwmon: (dell-smm) Remove Dell Precision 490 custom config data (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1594,6 +1594,7 @@
 	patches.kernel.org/6.17.8-206-nvme-Use-non-zero-KATO-for-persistent-discover.patch
 	patches.kernel.org/6.17.8-207-uprobe-Do-not-emulate-sstep-original-instructi.patch
 	patches.kernel.org/6.17.8-208-hwmon-asus-ec-sensors-increase-timeout-for-loc.patch
+	patches.kernel.org/6.17.8-209-hwmon-dell-smm-Remove-Dell-Precision-490-custo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
