--- a/series.conf
+++ b/series.conf
@@ -2094,6 +2094,7 @@
 	patches.kernel.org/6.17.8-706-clk-at91-clk-sam9x60-pll-force-write-to-PLL_UP.patch
 	patches.kernel.org/6.17.8-707-9p-trans_fd-p9_fd_request-kick-rx-thread-if-EP.patch
 	patches.kernel.org/6.17.8-708-clk-ti-am33xx-keep-WKUP_DEBUGSS_CLKCTRL-enable.patch
+	patches.kernel.org/6.17.8-709-clk-scmi-Add-duty-cycle-ops-only-when-duty-cyc.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
