scsi: ufs: core: Change MCQ interrupt enable flow (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2017,6 +2017,7 @@
 	patches.kernel.org/6.17.8-629-nfs4_setup_readdir-insufficient-locking-for-d_.patch
 	patches.kernel.org/6.17.8-630-net-bridge-Install-FDB-for-bridge-MAC-on-VLAN-.patch
 	patches.kernel.org/6.17.8-631-net-phy-dp83640-improve-phydev-and-driver-remo.patch
+	patches.kernel.org/6.17.8-632-scsi-ufs-core-Change-MCQ-interrupt-enable-flow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
