drm/amdgpu: refactor bad_page_work for corner case handling (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1701,6 +1701,7 @@
 	patches.kernel.org/6.17.8-313-drm-bridge-display-connector-don-t-set-OP_DETE.patch
 	patches.kernel.org/6.17.8-314-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 	patches.kernel.org/6.17.8-315-drm-amdkfd-Handle-lack-of-READ-permissions-in-.patch
+	patches.kernel.org/6.17.8-316-drm-amdgpu-refactor-bad_page_work-for-corner-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
