--- a/series.conf
+++ b/series.conf
@@ -2188,6 +2188,7 @@
 	patches.kernel.org/6.17.8-800-drm-amd-display-Enable-mst-when-it-s-detected-.patch
 	patches.kernel.org/6.17.8-801-wifi-cfg80211-add-an-hrtimer-based-delayed-wor.patch
 	patches.kernel.org/6.17.8-802-wifi-mac80211-use-wiphy_hrtimer_work-for-ml_re.patch
+	patches.kernel.org/6.17.8-803-platform-x86-int3472-Fix-double-free-of-GPIO-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
