--- a/series.conf
+++ b/series.conf
@@ -2087,6 +2087,7 @@
 	patches.kernel.org/6.17.8-699-um-Fix-help-message-for-ssl-non-raw.patch
 	patches.kernel.org/6.17.8-700-clk-sunxi-ng-sun6i-rtc-Add-A523-specifics.patch
 	patches.kernel.org/6.17.8-701-rtc-pcf2127-clear-minute-second-interrupt.patch
+	patches.kernel.org/6.17.8-702-ARM-at91-pm-save-and-restore-ACR-during-PLL-di.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
