--- a/series.conf
+++ b/series.conf
@@ -1415,6 +1415,7 @@
 	patches.kernel.org/6.17.8-027-x86-CPU-AMD-Add-RDSEED-fix-for-Zen5.patch
 	patches.kernel.org/6.17.8-028-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
 	patches.kernel.org/6.17.8-029-wifi-ath10k-Fix-memory-leak-on-unsupported-WMI.patch
+	patches.kernel.org/6.17.8-030-wifi-ath11k-Add-missing-platform-IDs-for-quirk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
