crypto: caam - double the entropy delay interval for retry (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1915,6 +1915,7 @@
 	patches.kernel.org/6.17.8-527-crypto-sun8i-ce-remove-channel-timeout-field.patch
 	patches.kernel.org/6.17.8-528-PCI-dwc-Verify-the-single-eDMA-IRQ-in-dw_pcie_.patch
 	patches.kernel.org/6.17.8-529-crypto-ccp-Fix-incorrect-payload-size-calculat.patch
+	patches.kernel.org/6.17.8-530-crypto-caam-double-the-entropy-delay-interval-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
