--- a/series.conf
+++ b/series.conf
@@ -1789,6 +1789,7 @@
 	patches.kernel.org/6.17.8-401-microchip-lan865x-add-ndo_eth_ioctl-handler-to.patch
 	patches.kernel.org/6.17.8-402-tcp-use-dst_dev_rcu-in-tcp_fastopen_active_dis.patch
 	patches.kernel.org/6.17.8-403-crypto-qat-use-kcalloc-in-qat_uclo_map_objs_fr.patch
+	patches.kernel.org/6.17.8-404-scsi-pm8001-Use-int-instead-of-u32-to-store-er.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
