--- a/series.conf
+++ b/series.conf
@@ -2141,6 +2141,7 @@
 	patches.kernel.org/6.17.8-753-Revert-wifi-ath12k-Fix-missing-station-power-s.patch
 	patches.kernel.org/6.17.8-754-scsi-ufs-core-Revert-Make-HID-attributes-visib.patch
 	patches.kernel.org/6.17.8-755-Bluetooth-hci_event-validate-skb-length-for-un.patch
+	patches.kernel.org/6.17.8-756-Bluetooth-btrtl-Fix-memory-leak-in-rtlbt_parse.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
