ALSA: usb-audio: add mono main switch to Presonus S1824c (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1453,6 +1453,7 @@
 	patches.kernel.org/6.17.8-065-Bluetooth-hci_core-Fix-tracking-of-periodic-ad.patch
 	patches.kernel.org/6.17.8-066-bpf-Conditionally-include-dynptr-copy-kfuncs.patch
 	patches.kernel.org/6.17.8-067-drm-msm-Ensure-vm-is-created-in-VM_BIND-ioctl.patch
+	patches.kernel.org/6.17.8-068-ALSA-usb-audio-add-mono-main-switch-to-Presonu.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
