drm/amd/display: Fix DMCUB loading sequence for DCN3.2 (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1935,6 +1935,7 @@
 	patches.kernel.org/6.17.8-547-drm-amdgpu-Use-memdup_array_user-in-amdgpu_cs_.patch
 	patches.kernel.org/6.17.8-548-drm-amdgpu-validate-userq-buffer-virtual-addre.patch
 	patches.kernel.org/6.17.8-549-drm-amdgpu-Release-hive-reference-properly.patch
+	patches.kernel.org/6.17.8-550-drm-amd-display-Fix-DMCUB-loading-sequence-for.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
