--- a/series.conf
+++ b/series.conf
@@ -2040,6 +2040,7 @@
 	patches.kernel.org/6.17.8-652-platform-x86-x86-android-tablets-Stop-using-EP.patch
 	patches.kernel.org/6.17.8-653-vfio-pci-Fix-INTx-handling-on-legacy-non-PCI-2.patch
 	patches.kernel.org/6.17.8-654-vfio-nvgrace-gpu-Add-GB300-SKU-to-the-devid-ta.patch
+	patches.kernel.org/6.17.8-655-selftest-net-Fix-error-message-if-empty-variab.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
