--- a/series.conf
+++ b/series.conf
@@ -1982,6 +1982,7 @@
 	patches.kernel.org/6.17.8-594-net-phy-clear-link-parameters-on-admin-link-do.patch
 	patches.kernel.org/6.17.8-595-net-ethernet-microchip-sparx5-make-it-selectab.patch
 	patches.kernel.org/6.17.8-596-bus-mhi-core-Improve-mhi_sync_power_up-handlin.patch
+	patches.kernel.org/6.17.8-597-iommu-vt-d-Replace-snprintf-with-scnprintf-in-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
