--- a/series.conf
+++ b/series.conf
@@ -1858,6 +1858,7 @@
 	patches.kernel.org/6.17.8-470-dt-bindings-display-msm-gmu-Update-Adreno-623-.patch
 	patches.kernel.org/6.17.8-471-drm-msm-make-sure-to-not-queue-up-recovery-mor.patch
 	patches.kernel.org/6.17.8-472-char-Use-list_del_init-in-misc_deregister-to-r.patch
+	patches.kernel.org/6.17.8-473-drm-msm-adreno-Add-speedbin-data-for-A623-GPU.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
