clocksource: hyper-v: Skip unnecessary checks for the root partition (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2082,6 +2082,7 @@
 	patches.kernel.org/6.17.8-694-clk-renesas-rzv2h-Re-assert-reset-on-deassert-.patch
 	patches.kernel.org/6.17.8-695-clk-samsung-exynos990-Add-missing-USB-clock-re.patch
 	patches.kernel.org/6.17.8-696-fs-hpfs-Fix-error-code-for-new_inode-failure-i.patch
+	patches.kernel.org/6.17.8-697-clocksource-hyper-v-Skip-unnecessary-checks-fo.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
