--- a/series.conf
+++ b/series.conf
@@ -2000,6 +2000,7 @@
 	patches.kernel.org/6.17.8-612-PCI-PM-Skip-resuming-to-D0-if-device-is-discon.patch
 	patches.kernel.org/6.17.8-613-selftests-forwarding-Reorder-ar-ping-arguments.patch
 	patches.kernel.org/6.17.8-614-remoteproc-qcom-q6v5-Avoid-handling-handover-t.patch
+	patches.kernel.org/6.17.8-615-wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-2.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
