bpf: Clear pfmemalloc flag when freeing all fragments (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1589,6 +1589,7 @@
 	patches.kernel.org/6.17.8-201-clocksource-drivers-timer-rtl-otto-Do-not-inte.patch
 	patches.kernel.org/6.17.8-202-blk-cgroup-fix-possible-deadlock-while-configu.patch
 	patches.kernel.org/6.17.8-203-riscv-bpf-Fix-uninitialized-symbol-retval_off.patch
+	patches.kernel.org/6.17.8-204-bpf-Clear-pfmemalloc-flag-when-freeing-all-fra.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
