usb: gadget: f_hid: Fix zero length packet transfer (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1847,6 +1847,7 @@
 	patches.kernel.org/6.17.8-459-drm-amd-display-Indicate-when-custom-brightnes.patch
 	patches.kernel.org/6.17.8-460-selftests-ncdevmem-don-t-retry-EFAULT.patch
 	patches.kernel.org/6.17.8-461-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
+	patches.kernel.org/6.17.8-462-usb-gadget-f_hid-Fix-zero-length-packet-transf.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
