--- a/series.conf
+++ b/series.conf
@@ -1886,6 +1886,7 @@
 	patches.kernel.org/6.17.8-498-scsi-ufs-host-mediatek-Fix-adapt-issue-after-P.patch
 	patches.kernel.org/6.17.8-499-ntfs3-pretend-Extend-records-as-regular-files.patch
 	patches.kernel.org/6.17.8-500-wifi-cfg80211-update-the-time-stamps-in-hidden.patch
+	patches.kernel.org/6.17.8-501-wifi-mac80211-Fix-HE-capabilities-element-chec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
