--- a/series.conf
+++ b/series.conf
@@ -2002,6 +2002,7 @@
 	patches.kernel.org/6.17.8-614-remoteproc-qcom-q6v5-Avoid-handling-handover-t.patch
 	patches.kernel.org/6.17.8-615-wifi-ath12k-Increase-DP_REO_CMD_RING_SIZE-to-2.patch
 	patches.kernel.org/6.17.8-616-net-dsa-microchip-Set-SPI-as-bus-interface-dur.patch
+	patches.kernel.org/6.17.8-617-bng_en-make-bnge_alloc_ring-self-unwind-on-fai.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
