--- a/series.conf
+++ b/series.conf
@@ -2060,6 +2060,7 @@
 	patches.kernel.org/6.17.8-672-orangefs-fix-xattr-related-buffer-overflow.patch
 	patches.kernel.org/6.17.8-673-ftrace-Fix-softlockup-in-ftrace_module_enable.patch
 	patches.kernel.org/6.17.8-674-net-mlx5e-Prevent-entering-switchdev-mode-with.patch
+	patches.kernel.org/6.17.8-675-ksmbd-use-sock_create_kern-interface-to-create.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
