ASoC: qcom: sc8280xp: explicitly set S16LE format in sc8280xp_be_hw_params_fixup() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1978,6 +1978,7 @@
 	patches.kernel.org/6.17.8-590-jfs-fix-uninitialized-waitqueue-in-transaction.patch
 	patches.kernel.org/6.17.8-591-mei-make-a-local-copy-of-client-uuid-in-connec.patch
 	patches.kernel.org/6.17.8-592-drm-amdgpu-atom-Check-kcalloc-for-WS-buffer-in.patch
+	patches.kernel.org/6.17.8-593-ASoC-qcom-sc8280xp-explicitly-set-S16LE-format.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
