--- a/series.conf
+++ b/series.conf
@@ -2157,6 +2157,7 @@
 	patches.kernel.org/6.17.8-769-net-dsa-b53-fix-bcm63xx-RGMII-port-link-adjust.patch
 	patches.kernel.org/6.17.8-770-net-dsa-b53-fix-enabling-ip-multicast.patch
 	patches.kernel.org/6.17.8-771-net-dsa-b53-stop-reading-ARL-entries-if-search.patch
+	patches.kernel.org/6.17.8-772-net-dsa-b53-properly-bound-ARL-searches-for-4-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
