--- a/series.conf
+++ b/series.conf
@@ -1730,6 +1730,7 @@
 	patches.kernel.org/6.17.8-342-idpf-do-not-linearize-big-TSO-packets.patch
 	patches.kernel.org/6.17.8-343-drm-xe-pcode-Initialize-data0-for-pcode-read-r.patch
 	patches.kernel.org/6.17.8-344-drm-panel-ilitek-ili9881c-turn-off-power-suppl.patch
+	patches.kernel.org/6.17.8-345-drm-panel-ilitek-ili9881c-move-display_on-_off.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
