--- a/series.conf
+++ b/series.conf
@@ -1855,6 +1855,7 @@
 	patches.kernel.org/6.17.8-467-eeprom-at25-support-Cypress-FRAMs-without-devi.patch
 	patches.kernel.org/6.17.8-468-drm-msm-adreno-Add-speedbins-for-A663-GPU.patch
 	patches.kernel.org/6.17.8-469-drm-msm-Fix-32b-size-truncation.patch
+	patches.kernel.org/6.17.8-470-dt-bindings-display-msm-gmu-Update-Adreno-623-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
