Bluetooth: ISO: Use sk_sndtimeo as conn_timeout (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2048,6 +2048,7 @@
 	patches.kernel.org/6.17.8-660-Bluetooth-btintel_pcie-Define-hdev-wakeup-call.patch
 	patches.kernel.org/6.17.8-661-Bluetooth-ISO-Don-t-initiate-CIS-connections-i.patch
 	patches.kernel.org/6.17.8-662-Bluetooth-btusb-Check-for-unexpected-bytes-whe.patch
+	patches.kernel.org/6.17.8-663-Bluetooth-ISO-Use-sk_sndtimeo-as-conn_timeout.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
