drm/amd/display: ensure committing streams is seamless (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1617,6 +1617,7 @@
 	patches.kernel.org/6.17.8-229-drm-xe-configfs-Enforce-canonical-device-names.patch
 	patches.kernel.org/6.17.8-230-drm-amd-display-Update-tiled-to-tiled-copy-com.patch
 	patches.kernel.org/6.17.8-231-drm-amd-display-fix-condition-for-setting-timi.patch
+	patches.kernel.org/6.17.8-232-drm-amd-display-ensure-committing-streams-is-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
