selftests: drv-net: hds: restore hds settings (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1749,6 +1749,7 @@
 	patches.kernel.org/6.17.8-361-remoteproc-wkup_m3-Use-devm_pm_runtime_enable-.patch
 	patches.kernel.org/6.17.8-362-drm-xe-wcl-Extend-L3bank-mask-workaround.patch
 	patches.kernel.org/6.17.8-363-net-phy-fixed_phy-let-fixed_phy_unregister-fre.patch
+	patches.kernel.org/6.17.8-364-selftests-drv-net-hds-restore-hds-settings.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
