drm/xe/i2c: Enable bus mastering (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1867,6 +1867,7 @@
 	patches.kernel.org/6.17.8-479-wifi-rtw89-Add-USB-ID-2001-332a-for-D-Link-AX9.patch
 	patches.kernel.org/6.17.8-480-wifi-rtw89-Add-USB-ID-2001-3327-for-D-Link-AX1.patch
 	patches.kernel.org/6.17.8-481-wifi-iwlwifi-fw-Add-ASUS-to-PPAG-and-TAS-list.patch
+	patches.kernel.org/6.17.8-482-drm-xe-i2c-Enable-bus-mastering.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
