--- a/series.conf
+++ b/series.conf
@@ -1791,6 +1791,7 @@
 	patches.kernel.org/6.17.8-403-crypto-qat-use-kcalloc-in-qat_uclo_map_objs_fr.patch
 	patches.kernel.org/6.17.8-404-scsi-pm8001-Use-int-instead-of-u32-to-store-er.patch
 	patches.kernel.org/6.17.8-405-iio-adc-ad7124-do-not-require-mclk.patch
+	patches.kernel.org/6.17.8-406-scsi-ufs-exynos-fsd-Gate-ref_clk-and-put-UFS-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
