x86/CPU/AMD: Add missing terminator for zen5_rdseed_microcode (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2206,6 +2206,7 @@
 	patches.kernel.org/6.17.8-818-x86-amd_node-Fix-AMD-root-device-caching.patch
 	patches.kernel.org/6.17.8-819-xfs-fix-delalloc-write-failures-in-software-pr.patch
 	patches.kernel.org/6.17.8-820-xfs-fix-various-problems-in-xfs_atomic_write_c.patch
+	patches.kernel.org/6.17.8-821-x86-CPU-AMD-Add-missing-terminator-for-zen5_rd.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
