--- a/series.conf
+++ b/series.conf
@@ -2149,6 +2149,7 @@
 	patches.kernel.org/6.17.8-761-selftests-net-use-destination-options-instead-.patch
 	patches.kernel.org/6.17.8-762-selftests-netdevsim-Fix-ethtool-coalesce.sh-fa.patch
 	patches.kernel.org/6.17.8-763-net-vlan-sync-VLAN-features-with-lower-device.patch
+	patches.kernel.org/6.17.8-764-netconsole-Acquire-su_mutex-before-navigating-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
