--- a/series.conf
+++ b/series.conf
@@ -1728,6 +1728,7 @@
 	patches.kernel.org/6.17.8-340-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-eff.patch
 	patches.kernel.org/6.17.8-341-Octeontx2-af-Broadcast-XON-on-all-channels.patch
 	patches.kernel.org/6.17.8-342-idpf-do-not-linearize-big-TSO-packets.patch
+	patches.kernel.org/6.17.8-343-drm-xe-pcode-Initialize-data0-for-pcode-read-r.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
