--- a/series.conf
+++ b/series.conf
@@ -1746,6 +1746,7 @@
 	patches.kernel.org/6.17.8-358-extcon-fsa9480-Fix-wakeup-source-leaks-on-devi.patch
 	patches.kernel.org/6.17.8-359-extcon-axp288-Fix-wakeup-source-leaks-on-devic.patch
 	patches.kernel.org/6.17.8-360-drm-xe-Set-GT-as-wedged-before-sending-wedged-.patch
+	patches.kernel.org/6.17.8-361-remoteproc-wkup_m3-Use-devm_pm_runtime_enable-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
