--- a/series.conf
+++ b/series.conf
@@ -1960,6 +1960,7 @@
 	patches.kernel.org/6.17.8-572-scsi-lpfc-Decrement-ndlp-kref-after-FDISC-retr.patch
 	patches.kernel.org/6.17.8-573-scsi-lpfc-Check-return-status-of-lpfc_reset_fl.patch
 	patches.kernel.org/6.17.8-574-scsi-lpfc-Remove-ndlp-kref-decrement-clause-fo.patch
+	patches.kernel.org/6.17.8-575-scsi-lpfc-Define-size-of-debugfs-entry-for-xri.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
