--- a/series.conf
+++ b/series.conf
@@ -1821,6 +1821,7 @@
 	patches.kernel.org/6.17.8-433-media-adv7180-Do-not-write-format-to-device-in.patch
 	patches.kernel.org/6.17.8-434-media-adv7180-Only-validate-format-in-querystd.patch
 	patches.kernel.org/6.17.8-435-media-verisilicon-Explicitly-disable-selection.patch
+	patches.kernel.org/6.17.8-436-wifi-mac80211-Fix-6-GHz-Band-capabilities-elem.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
