ALSA: usb-audio: Add validation of UAC2/UAC3 effect units (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1725,6 +1725,7 @@
 	patches.kernel.org/6.17.8-337-PCI-P2PDMA-Fix-incorrect-pointer-usage-in-devm.patch
 	patches.kernel.org/6.17.8-338-bnxt_en-Add-Hyper-V-VF-ID.patch
 	patches.kernel.org/6.17.8-339-tty-serial-Modify-the-use-of-dev_err_probe.patch
+	patches.kernel.org/6.17.8-340-ALSA-usb-audio-Add-validation-of-UAC2-UAC3-eff.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
