--- a/series.conf
+++ b/series.conf
@@ -1880,6 +1880,7 @@
 	patches.kernel.org/6.17.8-492-scsi-ufs-ufs-qcom-Align-programming-sequence-o.patch
 	patches.kernel.org/6.17.8-493-scsi-ufs-host-mediatek-Fix-unbalanced-IRQ-enab.patch
 	patches.kernel.org/6.17.8-494-scsi-ufs-host-mediatek-Enhance-recovery-on-hib.patch
+	patches.kernel.org/6.17.8-495-net-phy-marvell-Fix-88e1510-downshift-counter-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
