hinic3: Queue pair endianness improvements (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1949,6 +1949,7 @@
 	patches.kernel.org/6.17.8-561-ethernet-Extend-device_get_mac_address-to-use-.patch
 	patches.kernel.org/6.17.8-562-scsi-ufs-ufs-qcom-Disable-lane-clocks-during-p.patch
 	patches.kernel.org/6.17.8-563-HID-i2c-hid-Resolve-touchpad-issues-on-Dell-sy.patch
+	patches.kernel.org/6.17.8-564-hinic3-Queue-pair-endianness-improvements.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
