--- a/series.conf
+++ b/series.conf
@@ -1529,6 +1529,7 @@
 	patches.kernel.org/6.17.8-141-cpufreq-longhaul-handle-NULL-policy-in-longhau.patch
 	patches.kernel.org/6.17.8-142-firmware-qcom-scm-Allow-QSEECOM-on-Dell-Inspir.patch
 	patches.kernel.org/6.17.8-143-kselftest-arm64-tpidr2-Switch-to-waitpid-over-.patch
+	patches.kernel.org/6.17.8-144-arc-Fix-__fls-const-foldability-via-__builtin_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
