media: imon: make send_packet() more robust (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1694,6 +1694,7 @@
 	patches.kernel.org/6.17.8-306-scsi-ufs-host-mediatek-Fix-invalid-access-in-v.patch
 	patches.kernel.org/6.17.8-307-gpu-nova-core-register-allow-fields-named-offs.patch
 	patches.kernel.org/6.17.8-308-net-ipv6-fix-field-spanning-memcpy-warning-in-.patch
+	patches.kernel.org/6.17.8-309-media-imon-make-send_packet-more-robust.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
