selftests/vsock: avoid false-positives when checking dmesg (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2183,6 +2183,7 @@
 	patches.kernel.org/6.17.8-795-lan966x-Fix-sleeping-in-atomic-context.patch
 	patches.kernel.org/6.17.8-796-net-bridge-fix-use-after-free-due-to-MST-port-.patch
 	patches.kernel.org/6.17.8-797-net-bridge-fix-MST-static-key-usage.patch
+	patches.kernel.org/6.17.8-798-selftests-vsock-avoid-false-positives-when-che.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
