--- a/series.conf
+++ b/series.conf
@@ -1848,6 +1848,7 @@
 	patches.kernel.org/6.17.8-460-selftests-ncdevmem-don-t-retry-EFAULT.patch
 	patches.kernel.org/6.17.8-461-net-dsa-felix-support-phy-mode-10g-qxgmii.patch
 	patches.kernel.org/6.17.8-462-usb-gadget-f_hid-Fix-zero-length-packet-transf.patch
+	patches.kernel.org/6.17.8-463-usb-cdns3-gadget-Use-after-free-during-failed-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
