--- a/series.conf
+++ b/series.conf
@@ -1540,6 +1540,7 @@
 	patches.kernel.org/6.17.8-152-power-supply-qcom_battmgr-add-OOI-chemistry.patch
 	patches.kernel.org/6.17.8-153-hwmon-k10temp-Add-thermal-support-for-AMD-Fami.patch
 	patches.kernel.org/6.17.8-154-hwmon-k10temp-Add-device-ID-for-Strix-Halo.patch
+	patches.kernel.org/6.17.8-155-hwmon-lenovo-ec-sensors-Update-P8-supprt.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
