--- a/series.conf
+++ b/series.conf
@@ -1431,6 +1431,7 @@
 	patches.kernel.org/6.17.8-043-bpf-Sync-pending-IRQ-work-before-freeing-ring-.patch
 	patches.kernel.org/6.17.8-044-scsi-ufs-core-Initialize-value-of-an-attribute.patch
 	patches.kernel.org/6.17.8-045-scsi-core-Fix-the-unit-attention-counter-imple.patch
+	patches.kernel.org/6.17.8-046-bpf-Do-not-audit-capability-check-in-do_jit.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
