ASoC: qdsp6: q6asm: do not sleep while atomic (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1407,6 +1407,7 @@
 	patches.kernel.org/6.17.8-019-fbdev-valkyriefb-Fix-reference-count-leak-in-v.patch
 	patches.kernel.org/6.17.8-020-mptcp-drop-bogus-optimization-in-__mptcp_check.patch
 	patches.kernel.org/6.17.8-021-mptcp-restore-window-probe.patch
+	patches.kernel.org/6.17.8-022-ASoC-qdsp6-q6asm-do-not-sleep-while-atomic.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
