tracing: tprobe-events: Fix to register tracepoint correctly (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2131,6 +2131,7 @@
 	patches.kernel.org/6.17.8-743-media-videobuf2-forbid-remove_bufs-when-legacy.patch
 	patches.kernel.org/6.17.8-744-drm-mediatek-Disable-AFBC-support-on-Mediatek-.patch
 	patches.kernel.org/6.17.8-745-Revert-wifi-ath10k-avoid-unnecessary-wait-for-.patch
+	patches.kernel.org/6.17.8-746-tracing-tprobe-events-Fix-to-register-tracepoi.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
