--- a/series.conf
+++ b/series.conf
@@ -1622,6 +1622,7 @@
 	patches.kernel.org/6.17.8-234-drm-amdgpu-Check-vcn-sram-load-return-value.patch
 	patches.kernel.org/6.17.8-235-drm-amd-display-Remove-check-DPIA-HPD-status-f.patch
 	patches.kernel.org/6.17.8-236-drm-amd-display-Move-setup_stream_attribute.patch
+	patches.kernel.org/6.17.8-237-drm-amd-display-Increase-AUX-Intra-Hop-Done-Ma.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
