--- a/series.conf
+++ b/series.conf
@@ -1556,6 +1556,7 @@
 	patches.kernel.org/6.17.8-168-soc-tegra-fuse-Add-Tegra114-nvmem-cells-and-fu.patch
 	patches.kernel.org/6.17.8-169-ARM-tegra-p880-set-correct-touchscreen-clippin.patch
 	patches.kernel.org/6.17.8-170-ARM-tegra-transformer-20-add-missing-magnetome.patch
+	patches.kernel.org/6.17.8-171-ARM-tegra-transformer-20-fix-audio-codec-inter.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
