drm/amdgpu/vpe: cancel delayed work in hw_fini (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1762,6 +1762,7 @@
 	patches.kernel.org/6.17.8-374-drm-amdkfd-Tie-UNMAP_LATENCY-to-queue_preempti.patch
 	patches.kernel.org/6.17.8-375-drm-amd-display-wait-for-otg-update-pending-la.patch
 	patches.kernel.org/6.17.8-376-drm-amd-display-Consider-sink-max-slice-width-.patch
+	patches.kernel.org/6.17.8-377-drm-amdgpu-vpe-cancel-delayed-work-in-hw_fini.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
