--- a/series.conf
+++ b/series.conf
@@ -1654,6 +1654,7 @@
 	patches.kernel.org/6.17.8-266-drm-amd-display-Wait-until-OTG-enable-state-is.patch
 	patches.kernel.org/6.17.8-267-drm-xe-rework-PDE-PAT-index-selection.patch
 	patches.kernel.org/6.17.8-268-docs-kernel-doc-avoid-script-crash-on-ancient-.patch
+	patches.kernel.org/6.17.8-269-drm-sharp-memory-Do-not-access-GEM-DMA-vaddr-d.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
