--- a/series.conf
+++ b/series.conf
@@ -1865,6 +1865,7 @@
 	patches.kernel.org/6.17.8-477-selftests-net-make-the-dump-test-less-sensitiv.patch
 	patches.kernel.org/6.17.8-478-PCI-endpoint-pci-epf-test-Limit-PCIe-BAR-size-.patch
 	patches.kernel.org/6.17.8-479-wifi-rtw89-Add-USB-ID-2001-332a-for-D-Link-AX9.patch
+	patches.kernel.org/6.17.8-480-wifi-rtw89-Add-USB-ID-2001-3327-for-D-Link-AX1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
