spi: loopback-test: Don't use %pK through printk (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1506,6 +1506,7 @@
 	patches.kernel.org/6.17.8-118-soc-aspeed-socinfo-Add-AST27xx-silicon-IDs.patch
 	patches.kernel.org/6.17.8-119-firmware-qcom-scm-preserve-assign_mem-error-re.patch
 	patches.kernel.org/6.17.8-120-soc-qcom-smem-Fix-endian-unaware-access-of-num.patch
+	patches.kernel.org/6.17.8-121-spi-loopback-test-Don-t-use-pK-through-printk.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
