--- a/series.conf
+++ b/series.conf
@@ -1875,6 +1875,7 @@
 	patches.kernel.org/6.17.8-487-drm-xe-guc-Always-add-CT-disable-action-during.patch
 	patches.kernel.org/6.17.8-488-f2fs-fix-wrong-layout-information-on-16KB-page.patch
 	patches.kernel.org/6.17.8-489-drm-amdgpu-validate-userq-input-args.patch
+	patches.kernel.org/6.17.8-490-selftests-mptcp-join-allow-more-time-to-send-A.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
