drm/amdgpu: Correct the loss of aca bank reg info (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1755,6 +1755,7 @@
 	patches.kernel.org/6.17.8-367-selftests-pci_endpoint-Skip-IRQ-test-if-IRQ-is.patch
 	patches.kernel.org/6.17.8-368-drm-xe-Ensure-GT-is-in-C0-during-resumes.patch
 	patches.kernel.org/6.17.8-369-misc-pci_endpoint_test-Skip-IRQ-tests-if-irq-i.patch
+	patches.kernel.org/6.17.8-370-drm-amdgpu-Correct-the-loss-of-aca-bank-reg-in.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
