--- a/series.conf
+++ b/series.conf
@@ -2191,6 +2191,7 @@
 	patches.kernel.org/6.17.8-803-platform-x86-int3472-Fix-double-free-of-GPIO-d.patch
 	patches.kernel.org/6.17.8-804-wifi-mac80211-use-wiphy_hrtimer_work-for-ttlm_.patch
 	patches.kernel.org/6.17.8-805-wifi-mac80211-use-wiphy_hrtimer_work-for-csa.s.patch
+	patches.kernel.org/6.17.8-806-fscrypt-fix-left-shift-underflow-when-inode-i_.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
