--- a/series.conf
+++ b/series.conf
@@ -1887,6 +1887,7 @@
 	patches.kernel.org/6.17.8-499-ntfs3-pretend-Extend-records-as-regular-files.patch
 	patches.kernel.org/6.17.8-500-wifi-cfg80211-update-the-time-stamps-in-hidden.patch
 	patches.kernel.org/6.17.8-501-wifi-mac80211-Fix-HE-capabilities-element-chec.patch
+	patches.kernel.org/6.17.8-502-fbcon-Use-screen-info-to-find-primary-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
