--- a/series.conf
+++ b/series.conf
@@ -1434,6 +1434,7 @@
 	patches.kernel.org/6.17.8-046-bpf-Do-not-audit-capability-check-in-do_jit.patch
 	patches.kernel.org/6.17.8-047-nvmet-auth-update-sc_c-in-host-response.patch
 	patches.kernel.org/6.17.8-048-crypto-s390-phmac-Do-not-modify-the-req-nbytes.patch
+	patches.kernel.org/6.17.8-049-crypto-aspeed-fix-double-free-caused-by-devm.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
