--- a/series.conf
+++ b/series.conf
@@ -1635,6 +1635,7 @@
 	patches.kernel.org/6.17.8-247-drm-amd-amdgpu-Release-xcp-drm-memory-after-un.patch
 	patches.kernel.org/6.17.8-248-drm-amdgpu-Fix-vcn-v5.0.1-poison-irq-call-trac.patch
 	patches.kernel.org/6.17.8-249-drm-xe-Extend-wa_13012615864-to-additional-Xe2.patch
+	patches.kernel.org/6.17.8-250-drm-amdgpu-Skip-poison-aca-bank-from-UE-channe.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
