--- a/series.conf
+++ b/series.conf
@@ -1810,6 +1810,7 @@
 	patches.kernel.org/6.17.8-422-move_mount-2-take-sanity-checks-in-beneath-cas.patch
 	patches.kernel.org/6.17.8-423-selftests-drv-net-rss_ctx-make-the-test-pass-w.patch
 	patches.kernel.org/6.17.8-424-ipv6-Add-sanity-checks-on-ipv6_devconf.rpl_seg.patch
+	patches.kernel.org/6.17.8-425-drm-xe-Extend-Wa_22021007897-to-Xe3-platforms.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
