drm/amd/display: add more cyan skillfish devices (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1636,6 +1636,7 @@
 	patches.kernel.org/6.17.8-248-drm-amdgpu-Fix-vcn-v5.0.1-poison-irq-call-trac.patch
 	patches.kernel.org/6.17.8-249-drm-xe-Extend-wa_13012615864-to-additional-Xe2.patch
 	patches.kernel.org/6.17.8-250-drm-amdgpu-Skip-poison-aca-bank-from-UE-channe.patch
+	patches.kernel.org/6.17.8-251-drm-amd-display-add-more-cyan-skillfish-device.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
