--- a/series.conf
+++ b/series.conf
@@ -2181,6 +2181,7 @@
 	patches.kernel.org/6.17.8-793-net-wan-framer-pef2256-Switch-to-devm_mfd_add_.patch
 	patches.kernel.org/6.17.8-794-net-dsa-microchip-Fix-reserved-multicast-addre.patch
 	patches.kernel.org/6.17.8-795-lan966x-Fix-sleeping-in-atomic-context.patch
+	patches.kernel.org/6.17.8-796-net-bridge-fix-use-after-free-due-to-MST-port-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
