drm/amd/pm: fix smu table id bound check issue in smu_cmn_update_table() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1466,6 +1466,7 @@
 	patches.kernel.org/6.17.8-078-ASoC-soc_sdw_utils-remove-cs42l43-component_na.patch
 	patches.kernel.org/6.17.8-079-drm-radeon-Do-not-kfree-devres-managed-rdev.patch
 	patches.kernel.org/6.17.8-080-drm-radeon-Remove-calls-to-drm_put_dev.patch
+	patches.kernel.org/6.17.8-081-drm-amd-pm-fix-smu-table-id-bound-check-issue-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
