ceph: fix multifs mds auth caps issue (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2120,6 +2120,7 @@
 	patches.kernel.org/6.17.8-732-ceph-add-checking-of-wait_for_completion_killa.patch
 	patches.kernel.org/6.17.8-733-ceph-fix-potential-race-condition-in-ceph_ioct.patch
 	patches.kernel.org/6.17.8-734-ceph-refactor-wake_up_bit-pattern-of-calling.patch
+	patches.kernel.org/6.17.8-735-ceph-fix-multifs-mds-auth-caps-issue.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
