virtio_net: fix alignment for virtio_net_hdr_v1_hash (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2213,6 +2213,7 @@
 	patches.kernel.org/6.17.8-825-drm-amd-display-Fix-NULL-deref-in-debugfs-odm_.patch
 	patches.kernel.org/6.17.8-826-drm-amdkfd-Don-t-clear-PT-after-process-killed.patch
 	patches.kernel.org/6.17.8-827-virtio-net-fix-received-length-check-in-big-pa.patch
+	patches.kernel.org/6.17.8-828-virtio_net-fix-alignment-for-virtio_net_hdr_v1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
