--- a/series.conf
+++ b/series.conf
@@ -2026,6 +2026,7 @@
 	patches.kernel.org/6.17.8-638-accel-habanalabs-support-mapping-cb-with-vmall.patch
 	patches.kernel.org/6.17.8-639-ASoC-renesas-msiof-add-.symmetric_xxx-on-snd_s.patch
 	patches.kernel.org/6.17.8-640-ASoC-renesas-msiof-use-reset-controller.patch
+	patches.kernel.org/6.17.8-641-ASoC-renesas-msiof-tidyup-DMAC-stop-timing.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
