selftests/bpf: Fix selftest verifier_arena_large failure (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1580,6 +1580,7 @@
 	patches.kernel.org/6.17.8-192-bpftool-Fix-Wuninitialized-const-pointer-warni.patch
 	patches.kernel.org/6.17.8-193-cpuidle-Fail-cpuidle-device-registration-if-th.patch
 	patches.kernel.org/6.17.8-194-futex-Don-t-leak-robust_list-pointer-on-exec-r.patch
+	patches.kernel.org/6.17.8-195-selftests-bpf-Fix-selftest-verifier_arena_larg.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
