selftests: Disable dad for ipv6 in fcnal-test.sh (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1903,6 +1903,7 @@
 	patches.kernel.org/6.17.8-515-netfilter-nf_reject-don-t-reply-to-icmp-error-.patch
 	patches.kernel.org/6.17.8-516-x86-kvm-Prefer-native-qspinlock-for-dedicated-.patch
 	patches.kernel.org/6.17.8-517-x86-virt-tdx-Use-precalculated-TDVPR-page-phys.patch
+	patches.kernel.org/6.17.8-518-selftests-Disable-dad-for-ipv6-in-fcnal-test.s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
