drm/amdgpu: Allow kfd CRIU with no buffer objects (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1804,6 +1804,7 @@
 	patches.kernel.org/6.17.8-416-netfilter-nf_tables-all-transaction-allocation.patch
 	patches.kernel.org/6.17.8-417-drm-msm-dsi-phy-Toggle-back-buffer-resync-afte.patch
 	patches.kernel.org/6.17.8-418-drm-msm-dsi-phy_7nm-Fix-missing-initial-VCO-ra.patch
+	patches.kernel.org/6.17.8-419-drm-amdgpu-Allow-kfd-CRIU-with-no-buffer-objec.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
