--- a/series.conf
+++ b/series.conf
@@ -1499,6 +1499,7 @@
 	patches.kernel.org/6.17.8-111-mptcp-fix-MSG_PEEK-stream-corruption.patch
 	patches.kernel.org/6.17.8-112-cpuidle-governors-menu-Rearrange-main-loop-in-.patch
 	patches.kernel.org/6.17.8-113-cpuidle-governors-menu-Select-polling-state-in.patch
+	patches.kernel.org/6.17.8-114-PM-hibernate-Combine-return-paths-in-power_dow.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
