--- a/series.conf
+++ b/series.conf
@@ -1843,6 +1843,7 @@
 	patches.kernel.org/6.17.8-455-drm-amdgpu-add-support-for-cyan-skillfish-gpu_.patch
 	patches.kernel.org/6.17.8-456-drm-amd-display-Fix-pbn_div-Calculation-Error.patch
 	patches.kernel.org/6.17.8-457-drm-amd-display-dont-wait-for-pipe-update-duri.patch
+	patches.kernel.org/6.17.8-458-drm-amd-pm-refine-amdgpu-pm-sysfs-node-error-c.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
