--- a/series.conf
+++ b/series.conf
@@ -1601,6 +1601,7 @@
 	patches.kernel.org/6.17.8-213-tools-power-turbostat-Fix-incorrect-sorting-of.patch
 	patches.kernel.org/6.17.8-214-tools-power-x86_energy_perf_policy-Fix-incorre.patch
 	patches.kernel.org/6.17.8-215-tools-power-x86_energy_perf_policy-Enhance-HWP.patch
+	patches.kernel.org/6.17.8-216-tools-power-x86_energy_perf_policy-Prefer-driv.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
