mptcp: drop bogus optimization in __mptcp_check_push() (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1405,6 +1405,7 @@
 	patches.kernel.org/6.17.8-017-wifi-brcmfmac-fix-crash-while-sending-Action-F.patch
 	patches.kernel.org/6.17.8-018-fbdev-pvr2fb-Fix-leftover-reference-to-ONCHIP_.patch
 	patches.kernel.org/6.17.8-019-fbdev-valkyriefb-Fix-reference-count-leak-in-v.patch
+	patches.kernel.org/6.17.8-020-mptcp-drop-bogus-optimization-in-__mptcp_check.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
