bnxt_en: Always provide max entry and entry size in coredump segments (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2168,6 +2168,7 @@
 	patches.kernel.org/6.17.8-780-bnxt_en-Shutdown-FW-DMA-in-bnxt_shutdown.patch
 	patches.kernel.org/6.17.8-781-bnxt_en-Fix-a-possible-memory-leak-in-bnxt_ptp.patch
 	patches.kernel.org/6.17.8-782-bnxt_en-Fix-null-pointer-dereference-in-bnxt_b.patch
+	patches.kernel.org/6.17.8-783-bnxt_en-Always-provide-max-entry-and-entry-siz.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
