ASoC: tas2781: Add keyword "init" in profile section (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1647,6 +1647,7 @@
 	patches.kernel.org/6.17.8-259-drm-amdgpu-jpeg-Hold-pg_lock-before-jpeg-power.patch
 	patches.kernel.org/6.17.8-260-drm-xe-pf-Program-LMTT-directory-pointer-on-al.patch
 	patches.kernel.org/6.17.8-261-drm-nouveau-replace-snprintf-with-scnprintf-in.patch
+	patches.kernel.org/6.17.8-262-ASoC-tas2781-Add-keyword-init-in-profile-secti.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
