wifi: ath12k: free skb during idr cleanup callback (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1416,6 +1416,7 @@
 	patches.kernel.org/6.17.8-028-x86-fpu-Ensure-XFD-state-on-signal-delivery.patch
 	patches.kernel.org/6.17.8-029-wifi-ath10k-Fix-memory-leak-on-unsupported-WMI.patch
 	patches.kernel.org/6.17.8-030-wifi-ath11k-Add-missing-platform-IDs-for-quirk.patch
+	patches.kernel.org/6.17.8-031-wifi-ath12k-free-skb-during-idr-cleanup-callba.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
