usb: xhci-pci: Fix USB2-only root hub registration (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2064,6 +2064,7 @@
 	patches.kernel.org/6.17.8-676-smb-client-update-cfid-last_access_time-in-ope.patch
 	patches.kernel.org/6.17.8-677-smb-client-transport-avoid-reconnects-triggere.patch
 	patches.kernel.org/6.17.8-678-ima-don-t-clear-IMA_DIGSIG-flag-when-setting-o.patch
+	patches.kernel.org/6.17.8-679-usb-xhci-pci-Fix-USB2-only-root-hub-registrati.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
