hwrng: timeriomem - Use us_to_ktime() where appropriate (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1702,6 +1702,7 @@
 	patches.kernel.org/6.17.8-314-drm-amdgpu-fix-nullptr-err-of-vm_handle_moved.patch
 	patches.kernel.org/6.17.8-315-drm-amdkfd-Handle-lack-of-READ-permissions-in-.patch
 	patches.kernel.org/6.17.8-316-drm-amdgpu-refactor-bad_page_work-for-corner-c.patch
+	patches.kernel.org/6.17.8-317-hwrng-timeriomem-Use-us_to_ktime-where-appropr.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
