--- a/series.conf
+++ b/series.conf
@@ -2114,6 +2114,7 @@
 	patches.kernel.org/6.17.8-726-net-wwan-t7xx-add-support-for-HP-DRMR-H01.patch
 	patches.kernel.org/6.17.8-727-kbuild-uapi-Strip-comments-before-size-type-ch.patch
 	patches.kernel.org/6.17.8-728-ASoC-meson-aiu-encoder-i2s-fix-bit-clock-polar.patch
+	patches.kernel.org/6.17.8-729-ASoC-rt722-add-settings-for-rt722VB.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
