drm/bridge: display-connector: don't set OP_DETECT for DisplayPorts (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1698,6 +1698,7 @@
 	patches.kernel.org/6.17.8-310-drm-panthor-Serialize-GPU-cache-flush-operatio.patch
 	patches.kernel.org/6.17.8-311-HID-pidff-Use-direction-fix-only-for-condition.patch
 	patches.kernel.org/6.17.8-312-HID-pidff-PERMISSIVE_CONTROL-quirk-autodetecti.patch
+	patches.kernel.org/6.17.8-313-drm-bridge-display-connector-don-t-set-OP_DETE.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
