gpio: swnode: don't use the swnode's name as the key for GPIO lookup (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2150,6 +2150,7 @@
 	patches.kernel.org/6.17.8-762-selftests-netdevsim-Fix-ethtool-coalesce.sh-fa.patch
 	patches.kernel.org/6.17.8-763-net-vlan-sync-VLAN-features-with-lower-device.patch
 	patches.kernel.org/6.17.8-764-netconsole-Acquire-su_mutex-before-navigating-.patch
+	patches.kernel.org/6.17.8-765-gpio-swnode-don-t-use-the-swnode-s-name-as-the.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
