sctp: Hold RCU read lock while iterating over address list (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -2158,6 +2158,7 @@
 	patches.kernel.org/6.17.8-770-net-dsa-b53-fix-enabling-ip-multicast.patch
 	patches.kernel.org/6.17.8-771-net-dsa-b53-stop-reading-ARL-entries-if-search.patch
 	patches.kernel.org/6.17.8-772-net-dsa-b53-properly-bound-ARL-searches-for-4-.patch
+	patches.kernel.org/6.17.8-773-sctp-Hold-RCU-read-lock-while-iterating-over-a.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
