--- a/series.conf
+++ b/series.conf
@@ -1393,6 +1393,7 @@
 	patches.kernel.org/6.17.8-005-Revert-NFSD-Remove-the-cap-on-number-of-operat.patch
 	patches.kernel.org/6.17.8-006-net-usb-asix_devices-Check-return-value-of-usb.patch
 	patches.kernel.org/6.17.8-007-fbcon-Set-fb_display-i-mode-to-NULL-when-the-m.patch
+	patches.kernel.org/6.17.8-008-fbdev-atyfb-Check-if-pll_ops-init_pll-failed.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
