--- a/series.conf
+++ b/series.conf
@@ -1988,6 +1988,7 @@
 	patches.kernel.org/6.17.8-600-wifi-mac80211-Get-the-correct-interface-for-no.patch
 	patches.kernel.org/6.17.8-601-wifi-mac80211-Track-NAN-interface-start-stop.patch
 	patches.kernel.org/6.17.8-602-net-intel-fm10k-Fix-parameter-idx-set-but-not-.patch
+	patches.kernel.org/6.17.8-603-r8169-set-EEE-speed-down-ratio-to-1.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
