media: imx-mipi-csis: Only set clock rate when specified in DT (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1792,6 +1792,7 @@
 	patches.kernel.org/6.17.8-404-scsi-pm8001-Use-int-instead-of-u32-to-store-er.patch
 	patches.kernel.org/6.17.8-405-iio-adc-ad7124-do-not-require-mclk.patch
 	patches.kernel.org/6.17.8-406-scsi-ufs-exynos-fsd-Gate-ref_clk-and-put-UFS-d.patch
+	patches.kernel.org/6.17.8-407-media-imx-mipi-csis-Only-set-clock-rate-when-s.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
