drm/st7571-i2c: add support for inverted pixel format (bsc#1012628).

--- a/series.conf
+++ b/series.conf
@@ -1795,6 +1795,7 @@
 	patches.kernel.org/6.17.8-407-media-imx-mipi-csis-Only-set-clock-rate-when-s.patch
 	patches.kernel.org/6.17.8-408-media-nxp-imx8-isi-Fix-streaming-cleanup-on-re.patch
 	patches.kernel.org/6.17.8-409-wifi-iwlwifi-pcie-remember-when-interrupts-are.patch
+	patches.kernel.org/6.17.8-410-drm-st7571-i2c-add-support-for-inverted-pixel-.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
