--- a/series.conf
+++ b/series.conf
@@ -1517,6 +1517,7 @@
 	patches.kernel.org/6.17.8-129-cpufreq-ti-Add-support-for-AM62D2.patch
 	patches.kernel.org/6.17.8-130-bpf-Use-tnums-for-JEQ-JNE-is_branch_taken-logi.patch
 	patches.kernel.org/6.17.8-131-firmware-ti_sci-Enable-abort-handling-of-entry.patch
+	patches.kernel.org/6.17.8-132-firewire-ohci-move-self_id_complete-tracepoint.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
