--- a/series.conf
+++ b/series.conf
@@ -2199,6 +2199,7 @@
 	patches.kernel.org/6.17.8-811-parisc-Avoid-crash-due-to-unaligned-access-in-.patch
 	patches.kernel.org/6.17.8-812-rtc-rx8025-fix-incorrect-register-reference.patch
 	patches.kernel.org/6.17.8-813-x86-microcode-AMD-Add-more-known-models-to-ent.patch
+	patches.kernel.org/6.17.8-814-smb-client-validate-change-notify-buffer-befor.patch
 
 	########################################################
 	# Build fixes that apply to the vanilla kernel too.
